# MY_PROJECT_1

./: .flake8  README.md  pyproject.toml
src/: black  isort  masks.py  mypy  processing.py  widget.py
