[project]
name = "my-project-1"
version = "0.1.0"
description = ""
authors = [
    {name = "Anton Volodin",email = "volodin.anton003@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
lint = [
    "flake8 (>=7.3.0,<8.0.0)",
    "mypy (>=1.18.2,<2.0.0)",
    "black (>=25.9.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)"
]


[tool.black]
line-length = 119
exclude = ".git"


[tool.isort]
max-line-length = 119


[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"